fix: donor type
